# HashMath

./: .gitignore  .mcp.json  HashMath.lean  MANUAL.md  Makefile  README.md  TODO.md  VERIFICATION_PLAN.md  lakefile.toml  test-dht.sh  test.sh  whitepaper.tex
HashMath/: Decl.lean  DefEq.lean  Elab.lean  Environment.lean  Expr.lean  Hash.lean  Inductive.lean  Level.lean  Main.lean  Parser.lean  Quotient.lean  Reduce.lean  Serialize.lean  Syntax.lean  Tests.lean  TypeChecker.lean
HashMath/Properties/: HashInjectivity.lean  SerializeInj.lean
deploy/gce/: README.md  deploy.sh
examples/: decl_univ_params.hm  equality.hm  hero.hm  indexed.hm  large_elim.hm  let_exprs.hm  list_rec.hm  nat_arith.hm  nested_positive.hm  partial_application.hm  polymorphism.hm  recursion.hm
hm-net/: Cargo.toml  Dockerfile  bootstrap.toml
hm-net/src/: health.rs  ipc.rs  main.rs  store.rs  transfer.rs
lean/: HashMath.lean  lake-manifest.json  test.hm  test_exploit_false.hm
lean/HashMath/: Basic.lean  DefEq.lean  Elab.lean  Environment.lean  Expr.lean  Hash.lean  Inductive.lean  Level.lean  Main.lean  Parser.lean  Quotient.lean  Reduce.lean  SHA256.lean  Serialize.lean  Subterm.lean  SubtermTests.lean  Syntax.lean  Tests.lean  TypeChecker.lean
lean/examples/: basics.hm  cumulativity.hm  datatypes.hm  decl_univ_params.hm  eval.hm  func_type_eq.hm  higher_order.hm  k_elim.hm  logic.hm  match_test.hm  (+4 more)
whitepaper/: whitepaper.tex
wrong/: ctor_wrong_target.hm  positivity.hm  positivity_hidden.hm  positivity_hidden2.hm  type_expected.hm  type_mismatch.hm  type_mismatch2.hm  unknown_var.hm
(+59 files in other folders)
